--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ std = []
 
 [dependencies]
 cfg-if = "1.0.0"
+rustversion = "1.0.11"
 
 [dev-dependencies]
 rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
